# brain_games

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: make_lint.yml
brain_games/: cli.py
brain_games/game_modules/: calc.py  calcul.py  even.py  game_str.py  game_structure.py  gcd.py  hello_module.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_calcul.py  brain_even.py  brain_even.py.save  brain_games.py  brain_games.py.save  brain_gcd.py  brain_prime.py  brain_progression.py
